WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108126
WebKit2 should notify the client if the NetworkProcess crashes
https://bugs.webkit.org/show_bug.cgi?id=108126
Summary
WebKit2 should notify the client if the NetworkProcess crashes
Brady Eidson
Reported
2013-01-28 15:59:15 PST
WebKit2 should notify the client if the NetworkProcess crashes <
rdar://problem/13090513
>
Attachments
Patch v1
(5.50 KB, patch)
2013-01-28 16:01 PST
,
Brady Eidson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2013-01-28 16:01:44 PST
Created
attachment 185089
[details]
Patch v1
Brady Eidson
Comment 2
2013-01-28 16:43:15 PST
http://trac.webkit.org/changeset/141026
Alexey Proskuryakov
Comment 3
2013-01-28 22:01:04 PST
I don't think that adding this API this is desirable or necessary. Network process crashing is not the only case when authentication request should be canceled. Another case is when NSURLConnection dispatches -connection:didCancelAuthenticationChallenge:. So, we need a code path for that, and crashing can be handled using that code path. Exposing details of NetworkProcess lifecycle to clients seems unnecessary at this point.
Brady Eidson
Comment 4
2013-01-29 12:03:56 PST
(In reply to
comment #3
)
> I don't think that adding this API this is desirable or necessary. > > Network process crashing is not the only case when authentication request should be canceled. Another case is when NSURLConnection dispatches -connection:didCancelAuthenticationChallenge:. So, we need a code path for that, and crashing can be handled using that code path. > > Exposing details of NetworkProcess lifecycle to clients seems unnecessary at this point.
Sam and I have already had discussions by the couches for future uses of this API. They seem valid and are symmetric with the value we get from notifying the client that a WebProcess crashed. Feel free to ping me about them when you're back.
Brady Eidson
Comment 5
2013-01-29 12:06:42 PST
(In reply to
comment #3
)
> Network process crashing is not the only case when authentication request should be canceled. Another case is when NSURLConnection dispatches -connection:didCancelAuthenticationChallenge:. So, we need a code path for that, and crashing can be handled using that code path.
Also when you get back in, take a look at <
rdar://problem/8773140
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug