WebKit2 should notify the client if the NetworkProcess crashes. <rdar://problem/13090513> and https://bugs.webkit.org/show_bug.cgi?id=108126

Reviewed by Sam Weinig.

Add new client callback to the ContextClient:
* UIProcess/API/C/WKContext.h:
* UIProcess/WebContextClient.cpp:
(WebKit::WebContextClient::networkProcessDidCrash):
* UIProcess/WebContextClient.h:

Call out to the client when the NetworkProcess crashes:
* UIProcess/WebContext.cpp:
(WebKit::WebContext::networkProcessCrashed):
* UIProcess/WebContext.h:

* UIProcess/Network/NetworkProcessProxy.cpp:
(WebKit::NetworkProcessProxy::networkProcessCrashedOrFailedToLaunch):

Canonical link: https://commits.webkit.org/126334@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141026 268f45cc-cd09-0410-ab3c-d52691b4dbfc