Source/WebKit2/UIProcess/WebContextClient.h
@@ -36,6 +36,7 @@ class WebContext;
 class WebContextClient : public APIClient<WKContextClient, kWKContextClientCurrentVersion> {
 public:
     void plugInAutoStartOriginHashesChanged(WebContext*);
+    void networkProcessDidCrash(WebContext*);
 };
 
 } // namespace WebKit
